[gd_scene load_steps=12 format=3 uid="uid://4yhee4tssqsb"]

[ext_resource type="Script" path="res://village/scripts/VillageScene.gd" id="1_q7bpx"]
[ext_resource type="PackedScene" uid="uid://dfo7asubvab08" path="res://village/scenes/CampFire.tscn" id="1_u4slp"]
[ext_resource type="PackedScene" uid="uid://cwc4rjb3xwqx" path="res://village/scenes/WorkerAssignmentUI.tscn" id="2_exr1e"]
[ext_resource type="PackedScene" uid="uid://dc45tnfhvti72" path="res://village/scenes/CariyeManagementUI.tscn" id="4_fbyh8"]
[ext_resource type="PackedScene" uid="uid://dptamh04yqugv" path="res://village/scenes/VillageStatusUI.tscn" id="5_3scu2"]
[ext_resource type="PackedScene" uid="uid://bepujd34sp2i1" path="res://player/player.tscn" id="6_nhirr"]
[ext_resource type="PackedScene" uid="uid://ip73ci5ccf8t" path="res://village/scenes/TimeDisplayUI.tscn" id="7_miuw4"]
[ext_resource type="Texture2D" uid="uid://c0tlebkwmqbqu" path="res://village/assets/ChatGPT Image 12 Nis 2025 00_22_18.png" id="8_8if1x"]
[ext_resource type="Texture2D" uid="uid://d1g551y8ufkjn" path="res://village/assets/ChatGPT Image 12 Nis 2025 00_27_55.png" id="9_hgedo"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_pfood"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ftls5"]
radius = 50.0

[node name="VillageScene" type="Node2D"]
script = ExtResource("1_q7bpx")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_pfood")

[node name="CampFire" parent="." groups=["Housing"] instance=ExtResource("1_u4slp")]
position = Vector2(0, -6)

[node name="InteractionArea" type="Area2D" parent="CampFire" groups=["interactables"]]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="CampFire/InteractionArea"]
shape = SubResource("CircleShape2D_ftls5")

[node name="InteractionMenu" type="PopupMenu" parent="CampFire"]

[node name="PlacedBuildings" type="Node2D" parent="."]

[node name="PlotMarkers" type="Node2D" parent="."]

[node name="BuildPlot1" type="Marker2D" parent="PlotMarkers"]
position = Vector2(400, 0)

[node name="BuildPlot2" type="Marker2D" parent="PlotMarkers"]
position = Vector2(-400, 0)

[node name="BuildPlot3" type="Marker2D" parent="PlotMarkers"]
position = Vector2(800, 0)

[node name="BuildPlot4" type="Marker2D" parent="PlotMarkers"]
position = Vector2(-800, 0)

[node name="BuildPlot5" type="Marker2D" parent="PlotMarkers"]
position = Vector2(1200, 0)

[node name="BuildPlot6" type="Marker2D" parent="PlotMarkers"]
position = Vector2(-1200, 0)

[node name="WorkerAssignmentUI" parent="." instance=ExtResource("2_exr1e")]
visible = false

[node name="CariyeManagementUI" parent="." instance=ExtResource("4_fbyh8")]
visible = false

[node name="OpenWorkerUIButton" type="Button" parent="."]
visible = false
offset_left = -42.0
offset_top = 49.0
offset_right = 44.0
offset_bottom = 80.0
text = "Camp Fire"

[node name="AddVillagerButton" type="Button" parent="."]
visible = false
offset_left = -51.0
offset_top = 46.0
offset_right = 51.0
offset_bottom = 77.0
text = "Köylü lütfen"

[node name="OpenCariyeUIButton" type="Button" parent="."]
visible = false
offset_left = -28.0
offset_top = 83.0
offset_right = 29.0
offset_bottom = 114.0
text = "Cariye"

[node name="OpenBuildUIButton" type="Button" parent="."]
visible = false
offset_left = -28.0
offset_top = 117.0
offset_right = 29.0
offset_bottom = 148.0
text = "İnşaa"

[node name="VillageStatusUI" parent="." instance=ExtResource("5_3scu2")]

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
texture_filter = 1
enabled = false

[node name="Player" parent="." instance=ExtResource("6_nhirr")]
position = Vector2(2, -70)

[node name="WorkersContainer" type="Node2D" parent="."]

[node name="TimeDisplayUi" parent="." instance=ExtResource("7_miuw4")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(670, 242)

[node name="ChatGptImage12Nis2025002218" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
y_sort_enabled = true
position = Vector2(-670, -869)
scale = Vector2(1, 0.800781)
texture = ExtResource("8_8if1x")
centered = false

[node name="ChatGptImage12Nis2025002755" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
y_sort_enabled = true
position = Vector2(-2205, -785)
scale = Vector2(1, 0.6875)
texture = ExtResource("9_hgedo")
centered = false
